# VoxelEngine

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  run.sh
Shaders/: #empty.shader#  #empty.shader#~  empty.shader  empty.shader~
include/: Buffer.h  Buffer.h~  Camera.h  Camera.h~  Common.h  Common.h~  Shader.h  Shader.h~  Texture.h  Texture.h~  VertexArray.h  VertexArray.h~  World.h  World.h~  WorldConfig.h
src/: Buffer.cpp  Buffer.cpp~  Camera.cpp  Camera.cpp~  Shader.cpp  Shader.cpp~  Texture.cpp  Texture.cpp~  VertexArray.cpp  VertexArray.cpp~  World.cpp  World.cpp~  glad.c  main.cpp  main.cpp~
